Added handlers for endpoint
Added GetBook and PostBook for /reader
