# src/main/resources/schema/openapi.yaml
@@ -22,7 +22,7 @@ paths:
               $ref: '#/components/headers/X-Response-Time'
             Limit-Entities:
               description: Control the maximum amount of entities returned
-              required: false
+              required: true
               schema:
                 type: integer
           content:
@@ -50,7 +50,49 @@ paths:
             application/json:
               schema:
                 type: string
+  /reader:
+    post:
+      summary: Interact with readers
+      operationId: reader.borrow
+      description: |
+        Readers can borrow books
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Entity'
+      responses:
+        200:
+          description: |
+            Successful borrow of an entity
+          headers:
+            'X-Response-Time':
+              $ref: '#/components/headers/X-Response-Time'
+          content:
+            application/json:
+              schema:
+                type: string
 
+    get:
+      summary: Returns a list of books
+      operationId: return.books
+      description: |
+        Returns all the borrowed books
+      responses:
+        200:
+          description: A JSON array of books
+          headers:
+            X-Response-Time:
+              $ref: '#/components/headers/X-Response-Time'
+            Limit-Entities:
+              description: Control the maximum amount of entities returned
+              required: true
+              schema:
+                type: integer
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Entities'
 components:
   headers:
     X-Response-Time:
